networking/05-headerbased-routing/headerbased-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-app-headerbasedroute
  namespace: app-space
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra-gateway
  rules:
    # Rule1: Match label based on Beta Header
  - matches:
    - headers:
      - name: X-Beta-User
        value: "true"
    backendRefs:
    - name: svc-v2
      port: 80
  # Rule2: Fallback rule for all other traffic
  - backendRefs:
    - name: svc-v1
      port: 80
